# Transport-Authority-ALY6980_Fall-2025-Group-1

./: README.md
registry-server-mcp-101/: README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt
registry-server-mcp-101/deploy/: MCP_HEALTH_CHECK.md  QUICKSTART.md  README.md
registry-server-mcp-101/deploy/docker/: Dockerfile  deploy-linode-docker.sh  docker-compose.yml  provision-and-deploy-docker.sh
registry-server-mcp-101/deploy/kubernetes/: LKE_GUIDE.md  deploy-linode-k8s.sh  deployment.yaml  provision-and-deploy-k8s.sh  provision-lke-cluster.sh
registry-server-mcp-101/deploy/simple/: deploy-linode-simple.sh  provision-and-deploy-simple.sh
registry-server-mcp-101/examples/: EVOLUTION.md  QUICK_REFERENCE.md  README.md  requirements-examples.txt
registry-server-mcp-101/examples/01_regex_extraction/: README.md  anthropic_agent_example.py  simple_agent_lookup.py
registry-server-mcp-101/examples/02_mcp_tool_calling/: COMPARISON.txt  FLOW_DIAGRAM.txt  NATIVE_TOOL_CALLING.txt  README.md  mcp_native_tool_calling.py
registry-server-mcp-101/examples/03_a2a_agent_communication/: A2A_ARCHITECTURE.txt  A2A_COMMUNICATION.md  QUICKSTART_A2A.md  README.md  a2a_agent_communication.py
registry-server-mcp-101/examples/04_external_mcp_server/: QUICKSTART.md  README.md  STAGE_04_SUMMARY.md  external_mcp_client.py
registry-server-mcp-101/src/: agentFactsServer.py  agentIndex.py  agent_mcp.py
registry-server-mcp-101/src/registry_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
registry-server-mcp-101/src/services/: __init__.py  (+1 more)
(+10 files in other folders)
